# rust_snake_game

./: Cargo.toml  LICENSE  README.md  build.rs
src/: constants.rs  event_handler.rs  game_state.rs  main.rs  types.rs
